load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "nogo")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)

# gazelle:prefix github.com/b0ri5/solvents
gazelle(name = "gazelle")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    #    deps = ["@npm//:node_modules/gts/tsconfig-google.json"],
)

# See https://github.com/bazelbuild/rules_go/blob/master/go/nogo.rst#setup
nogo(
    name = "nogo",
    vet = True,
    visibility = ["//visibility:public"],  # must have public visibility
)
