load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_java//java:defs.bzl", "java_library", "java_test")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

ts_project(
    name = "fortytwo_ts",
    srcs = ["fortytwo.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "fortytwo_ts_test_lib",
    srcs = ["fortytwo_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":fortytwo_ts",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "fortytwo_ts_test",
    args = ["samples/fortytwo_test.js"],
    copy_data_to_bin = False,
    data = [
        ":fortytwo_ts",
        ":fortytwo_ts_test_lib",
    ],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)

java_library(
    name = "fortytwo_java",
    srcs = ["FortyTwo.java"],
)

java_test(
    name = "fortytwo_java_test",
    size = "small",
    srcs = ["FortyTwoTest.java"],
    test_class = "samples.FortyTwoTest",
    deps = [
        "fortytwo_java",
        "@maven//:com_google_truth_truth",
    ],
)

py_library(
    name = "fortytwo_py",
    srcs = ["fortytwo.py"],
)

py_test(
    name = "fortytwo_py_test",
    srcs = ["fortytwo_test.py"],
    main = "fortytwo_test.py",
    deps = [":fortytwo_py"],
)

cc_library(
    name = "fortytwo_cc",
    srcs = [
        "fortytwo.cc",
        "fortytwo.h",
    ],
)

cc_test(
    name = "fortytwo_cc_test",
    size = "small",
    deps = [
        ":fortytwo_cc",
        "@googletest//:gtest_main",
    ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "fortytwo.go",
    ],
    importpath = "github.com/b0ri5/solvents/samples",
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["fortytwo_test.go"],
    embed = [":go_default_library"],
)
