load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "gaps",
    srcs = ["gaps.py"],
)

py_test(
    name = "gaps_test",
    srcs = ["gaps_test.py"],
    deps = [":gaps"],
)

py_library(
    name = "reduced_residue_system",
    srcs = ["reduced_residue_system.py"],
    deps = [
        requirement("sympy"),
    ],
)

py_test(
    name = "reduced_residue_system_test",
    srcs = ["reduced_residue_system_test.py"],
    deps = [
        ":reduced_residue_system",
        requirement("sympy"),
    ],
)

py_binary(
    name = "two_classification_sequence",
    srcs = ["two_classification_sequence.py"],
    deps = [
        "reduced_residue_system",
    ],
)

py_binary(
    name = "min_prime_descendants",
    srcs = ["min_prime_descendants.py"],
    deps = [
        "reduced_residue_system",
        requirement("sympy"),
    ],
)
