load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "1.1",
    srcs = ["1.1.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "1.1_test_lib",
    srcs = ["1.1_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":1.1",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "1.1_test",
    args = ["probability-and-computing/chapter1/1.1_test.js"],
    copy_data_to_bin = False,
    data = [
        ":1.1_test_lib",
    ],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)

ts_project(
    name = "1.2",
    srcs = ["1.2.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "1.2_test_lib",
    srcs = ["1.2_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":1.2",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "1.2_test",
    args = ["probability-and-computing/chapter1/1.2_test.js"],
    copy_data_to_bin = False,
    data = [":1.2_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)

ts_project(
    name = "1.3",
    srcs = ["1.3.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "1.3_test_lib",
    srcs = ["1.3_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":1.3",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "1.3_test",
    args = ["probability-and-computing/chapter1/1.3_test.js"],
    copy_data_to_bin = False,
    data = [
        ":1.3_test_lib",
    ],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
