load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "multiples_of_3_or_5_ts",
    srcs = ["multiples_of_3_or_5.ts"],
)

ts_library(
    name = "multiples_of_3_or_5_ts_test_lib",
    srcs = ["multiples_of_3_or_5_test.ts"],
    deps = [
        ":multiples_of_3_or_5_ts",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "multiples_of_3_or_5_ts_test",
    deps = [":multiples_of_3_or_5_ts_test_lib"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "multiples_of_3_or_5.go",
    ],
    importpath = "github.com/b0ri5/solvents/projecteuler/p0001",
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["multiples_of_3_or_5_test.go"],
    embed = [":go_default_library"],
)
