load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "multiples_of_3_or_5_ts",
    srcs = ["multiples_of_3_or_5.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "multiples_of_3_or_5_ts_test_lib",
    srcs = ["multiples_of_3_or_5_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":multiples_of_3_or_5_ts",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "multiples_of_3_or_5_ts_test",
    args = ["projecteuler/p0001/multiples_of_3_or_5_test.js"],
    copy_data_to_bin = False,
    data = [":multiples_of_3_or_5_ts_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)

go_library(
    name = "go_default_library",
    srcs = [
        "multiples_of_3_or_5.go",
    ],
    importpath = "github.com/b0ri5/solvents/projecteuler/p0001",
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["multiples_of_3_or_5_test.go"],
    embed = [":go_default_library"],
)
