load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "even_fibonacci_numbers_ts",
    srcs = ["even_fibonacci_numbers.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "even_fibonacci_numbers_ts_test_lib",
    srcs = ["even_fibonacci_numbers_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":even_fibonacci_numbers_ts",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "even_fibonacci_numbers_test",
    args = ["projecteuler/p0002/even_fibonacci_numbers_test.js"],
    copy_data_to_bin = False,
    data = [":even_fibonacci_numbers_ts_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
