load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "largest_prime_factor",
    srcs = ["largest_prime_factor.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = ["//:node_modules/bignumber.js"],
)

ts_project(
    name = "largest_prime_factor_test_lib",
    srcs = ["largest_prime_factor_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":largest_prime_factor",
        "//:node_modules/@types/jasmine",
        "//:node_modules/bignumber.js",
    ],
)

jasmine_test(
    name = "largest_prime_factor_test",
    args = ["projecteuler/p0003/largest_prime_factor_test.js"],
    copy_data_to_bin = False,
    data = [":largest_prime_factor_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
