load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

ts_project(
    name = "largest_palindrome_product",
    srcs = ["largest_palindrome_product.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "@wksp//:tsconfig",
)

ts_project(
    name = "largest_palindrome_product_test_lib",
    srcs = ["largest_palindrome_product_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "@wksp//:tsconfig",
    deps = [
        ":largest_palindrome_product",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "largest_palindrome_product_test",
    deps = [":largest_palindrome_product_test_lib"],
)
