load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "largest_palindrome_product",
    srcs = ["largest_palindrome_product.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "largest_palindrome_product_test_lib",
    srcs = ["largest_palindrome_product_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":largest_palindrome_product",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "largest_palindrome_product_test",
    args = ["projecteuler/p0004/largest_palindrome_product_test.js"],
    copy_data_to_bin = False,
    data = [":largest_palindrome_product_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
