load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "smallest_multiple",
    srcs = ["smallest_multiple.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "smallest_multiple_test_lib",
    srcs = ["smallest_multiple_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":smallest_multiple",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "smallest_multiple_test",
    args = ["projecteuler/p0005/smallest_multiple_test.js"],
    copy_data_to_bin = False,
    data = [":smallest_multiple_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
