load("@npm//@bazel/jasmine:index.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "sum_square_difference",
    srcs = ["sum_square_difference.ts"],
)

ts_library(
    name = "sum_square_difference_test_lib",
    srcs = ["sum_square_difference_test.ts"],
    deps = [
        ":sum_square_difference",
        "@npm//@types/jasmine",
    ],
)

jasmine_node_test(
    name = "sum_square_difference_test",
    deps = [":sum_square_difference_test_lib"],
)

