load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "sum_square_difference",
    srcs = ["sum_square_difference.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "sum_square_difference_test_lib",
    srcs = ["sum_square_difference_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":sum_square_difference",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "sum_square_difference_test",
    args = ["projecteuler/p0006/sum_square_difference_test.js"],
    copy_data_to_bin = False,
    data = [":sum_square_difference_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)
