load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_jasmine//jasmine:defs.bzl", "jasmine_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "10001st_prime",
    srcs = ["10001st_prime.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "10001st_prime_test_lib",
    srcs = ["10001st_prime_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":10001st_prime",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "10001st_prime_test",
    args = ["projecteuler/p0007/10001st_prime_test.js"],
    copy_data_to_bin = False,
    data = [":10001st_prime_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
)

ts_project(
    name = "10001st_prime_stress_test_lib",
    srcs = ["1001st_prime_stress_test.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":10001st_prime",
        "//:node_modules/@types/jasmine",
    ],
)

jasmine_test(
    name = "10001st_prime_stress_test",
    args = ["projecteuler/p0007/10001st_prime_stress_test.js"],
    copy_data_to_bin = False,
    data = [":10001st_prime_stress_test_lib"],
    jasmine_reporters = False,
    node_modules = "//:node_modules",
    tags = ["manual"],
)

ts_project(
    name = "steps_lib",
    srcs = ["steps.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = ["//:node_modules/immutable"],
)

js_binary(
    name = "steps",
    data = [":steps_lib"],
    entry_point = ":steps.ts",
)

ts_project(
    name = "benchmark_lib",
    srcs = ["benchmark.ts"],
    composite = True,
    declaration = True,
    source_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":10001st_prime",
        "//:node_modules/@types/benchmark",
        "//:node_modules/benny",
    ],
)

# To run this and generate a profile do
# $ bazel build projecteuler/p0007:benchmark && NODE_ENV=production bazel-bin/projecteuler/p0007/benchmark.sh
# $ node --prof-process <the isloate file> > processed.txt
js_binary(
    name = "benchmark",
    args = ["--node_options=--prof"],
    data = [":benchmark_lib"],
    entry_point = ":benchmark.ts",
)
