load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fortyone.h",
        "fortytwo.go",
        "fortytwo.h",
    ],
    importpath = "github.com/b0ri5/solvents/samples/p01",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["fortytwo_test.go"],
    embed = [":go_default_library"],
)
